--- a/login.html
+++ b/login.html
@@ -24,7 +24,7 @@
                 <h1>Login</h1>
             </div>
            </div>
-            <form>
+            <form id="loginForm" name="login">
                <div class="form-group">
                  <label for="exampleInputEmail1">Email address</label>
                  <input type="email" name="email"  class="form-control" id="email" aria-describedby="emailHelp" placeholder="Enter email">
